WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37979
[chromium] fix ImageDiff compile on windows
https://bugs.webkit.org/show_bug.cgi?id=37979
Summary
[chromium] fix ImageDiff compile on windows
Tony Chang
Reported
2010-04-22 00:36:17 PDT
[chromium] fix ImageDiff compile on windows
Attachments
Patch
(1.06 KB, patch)
2010-04-22 00:36 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(1.05 KB, patch)
2010-04-22 01:00 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-04-22 00:36:41 PDT
Created
attachment 54035
[details]
Patch
Kent Tamura
Comment 2
2010-04-22 00:55:05 PDT
Comment on
attachment 54035
[details]
Patch This is a build fix. So I think we may commit it without review.
> --- a/WebKitTools/DumpRenderTree/chromium/ImageDiff.cpp > +++ b/WebKitTools/DumpRenderTree/chromium/ImageDiff.cpp > @@ -39,12 +39,15 @@ > #include "gfx/codec/png_codec.h" > #include <algorithm> > #include <stdio.h> > -#include <string.h> > -#include <string> > #include <vector>
strcmp() is used. We had better not remove string.h.
Tony Chang
Comment 3
2010-04-22 01:00:00 PDT
Created
attachment 54039
[details]
Patch
Tony Chang
Comment 4
2010-04-22 01:03:25 PDT
(In reply to
comment #2
)
> (From update of
attachment 54035
[details]
) > > --- a/WebKitTools/DumpRenderTree/chromium/ImageDiff.cpp > > +++ b/WebKitTools/DumpRenderTree/chromium/ImageDiff.cpp > > @@ -39,12 +39,15 @@ > > #include "gfx/codec/png_codec.h" > > #include <algorithm> > > #include <stdio.h> > > -#include <string.h> > > -#include <string> > > #include <vector> > > strcmp() is used. We had better not remove string.h.
Good catch. Attempting to land the revised patch now.
Tony Chang
Comment 5
2010-04-22 01:04:02 PDT
Committed
r58073
: <
http://trac.webkit.org/changeset/58073
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug