2010-04-22  Tony Chang  <tony@chromium.org>

Not reviewed, build fix for chromium Windows.

        [chromium] fix ImageDiff compile on windows
        https://bugs.webkit.org/show_bug.cgi?id=37979

        * DumpRenderTree/chromium/ImageDiff.cpp:

Canonical link: https://commits.webkit.org/49354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58073 268f45cc-cd09-0410-ab3c-d52691b4dbfc